# mlops-lab

./: Makefile  README.md  pyproject.toml
datastores/clean_data/: clean_census.csv
datastores/raw_texte_data/: journal.txt.dvc
datastores/split_data/: test_data.csv  train_data.csv
lab1/src/lab1/data_preprocessing/: preprocessing.py
lab1/src/lab1/data_split/: split.py
mlops-day1/data-versioning/: README.md
mlops-lab1-instruction/code-versioning/: README.md
mlops-lab2-instruction/docker/: README.md
mlops-lab2-instruction/fastapi/: README.md
notebook/: eda.ipynb
