[project]
name = "lab1"
version = "0.1.0"
description = ""
authors = [
    {name = "TouyeAchille",email = "touyejunior@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "black (>=25.9.0,<26.0.0)",
    "pre-commit (>=4.4.0,<5.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "poetry-plugin-export (>=1.9.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "dvc (>=3.63.0,<4.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "poetry (>=2.2.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "lab1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)"
]
